--- a/styles/debug.css
+++ b/styles/debug.css
@@ -105,26 +105,18 @@ body::after {
     background-color: #e1ddd5; }
   .colors.variation-tint li:nth-child(5)::before {
     background-color: #f8f5ec; }
-  .colors.variation-accent li:nth-child(1)::before {
+  .colors.variation-primary li:nth-child(1)::before {
     background-color: #2175b4; }
-  .colors.variation-accent li:nth-child(2)::before {
+  .colors.variation-primary li:nth-child(2)::before {
     background-color: #074779; }
-  .colors.variation-accent li:nth-child(3)::before {
+  .colors.variation-primary li:nth-child(3)::before {
     background-color: #095d9e; }
-  .colors.variation-accent li:nth-child(4)::before {
+  .colors.variation-primary li:nth-child(4)::before {
     background-color: #428ac1; }
-  .colors.variation-accent li:nth-child(5)::before {
+  .colors.variation-primary li:nth-child(5)::before {
     background-color: #69a5d3; }
-  .colors.variation-accent.complement li:nth-child(1)::before {
-    background-color: #f37f1e; }
-  .colors.variation-accent.complement li:nth-child(2)::before {
-    background-color: #9d4700; }
-  .colors.variation-accent.complement li:nth-child(3)::before {
-    background-color: #c65e07; }
-  .colors.variation-accent.complement li:nth-child(4)::before {
-    background-color: #ff9d4b; }
-  .colors.variation-accent.complement li:nth-child(5)::before {
-    background-color: #ffb374; }
+  .colors.variation-secondary li:nth-child(1)::before {
+    background-color: #ffd500; }
 
 .line-length {
   font-family: "Verdana", sans-serif;
