--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.84.0
+ * style.css v6.84.1
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -227,8 +227,10 @@ em {
   font-weight: bolder; }
 
 strong {
-  color: #f37f1e;
-  font-weight: normal; }
+  background-color: #534b47;
+  color: #f8f5ec;
+  font-weight: normal;
+  padding: 0.125rem; }
 
 cite {
   font-style: normal; }
@@ -258,8 +260,9 @@ kbd {
     width: 0; }
 
 mark {
-  background-color: #ffb374;
-  color: inherit; }
+  background-color: #ffd500;
+  color: inherit;
+  padding: 0.125rem; }
 
 ins {
   text-decoration: none; }
