--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.84.1
+ * style.css v6.84.2
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -34,7 +34,8 @@
 
 h1, h2 {
   font-weight: normal;
-  line-height: 1.36; }
+  line-height: 1.36;
+  text-indent: .067rem; }
 
 a {
   color: #2175b4;
@@ -227,8 +228,7 @@ em {
   font-weight: bolder; }
 
 strong {
-  background-color: #534b47;
-  color: #f8f5ec;
+  color: #ffab00;
   font-weight: normal;
   padding: 0.125rem; }
 
