--- a/styles/debug.css
+++ b/styles/debug.css
@@ -53,6 +53,8 @@ body::after {
       display: none; } }
 
 .version {
+  background-color: transparent;
+  color: #ffab00;
   font-size: 1rem;
   vertical-align: super; }
 
@@ -117,6 +119,10 @@ body::after {
     background-color: #69a5d3; }
   .colors.variation-secondary li:nth-child(1)::before {
     background-color: #ffd500; }
+  .colors.variation-secondary li:nth-child(2)::before {
+    background-color: #ffab00; }
+  .colors.variation-secondary li:nth-child(3)::before {
+    background-color: #fbfe00; }
 
 .line-length {
   font-family: "Verdana", sans-serif;
