Fix pinicon color

--- a/src/html/partial/link.mustache
+++ b/src/html/partial/link.mustache
@@ -1,4 +1,4 @@
 <link href="{{touch_icon}}" rel="apple-touch-icon" type="image/png">
-<link color="#fcf9f0" href="{{pin_icon}}" rel="mask-icon" type="image/svg">
+<link color="#534b47" href="{{pin_icon}}" rel="mask-icon" type="image/svg">
 <link href="{{canonical}}" rel="canonical">
 <link href="{{feed_url}}" rel="alternate" type="application/rss+xml">
