Maintain all link elements in one partial

--- a/src/html/partial/link.mustache
+++ b/src/html/partial/link.mustache
@@ -1,4 +1,14 @@
-<link href="{{touch_icon}}" rel="apple-touch-icon" type="image/png">
-<link color="#534b47" href="{{pin_icon}}" rel="mask-icon" type="image/svg">
-<link href="{{canonical}}" rel="canonical">
 <link href="{{feed_url}}" rel="alternate" type="application/rss+xml">
+<link href="{{touch_icon}}" rel="apple-touch-icon" type="image/png">
+<link href="{{canonical}}" rel="canonical">
+<link color="#534b47" href="{{pin_icon}}" rel="mask-icon" type="image/svg">
+
+{{#home}}
+  {{#articles}}
+    {{#first}}<link href="{{link}}" rel="prerender">{{/first}}
+  {{/articles}}
+{{/home}}
+
+{{#weblog_child}}<?$back_and_forth::enabled eq="1">$back_and_forth::link_next</?>{{/weblog_child}}
+
+<link href="/styles/style.min.css" rel="stylesheet">
