--- a/src/html/partial/script.mustache
+++ b/src/html/partial/script.mustache
@@ -1,7 +1,7 @@
 <script async src="/scripts/{{script}}.min.js"></script>
 
 <!-- Google AdSense -->
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
 <!-- Google Analytics -->
 <script>
