Append description for category

--- a/src/html/partial/meta.mustache
+++ b/src/html/partial/meta.mustache
@@ -2,7 +2,7 @@
 <meta content="width=device-width" name="viewport">
 {{^weblog_child}}<meta content="{{description}}" name="description">{{/weblog_child}}
 {{#weblog_child}}
-  <?$permalink::is_permalink ne="1"><meta content="{{description}}" name="description"></?>
+  <?$permalink::is_permalink ne="1"><meta content="{{description}}$categories::description" name="description"></?>
   <?$permalink::is_permalink eq="1"><meta content="$permalink::description" name="description"></?>
   <meta content="blosxom v$version" name="generator">
 {{/weblog_child}}
