--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -48,7 +48,7 @@
       {{/articles}}
 
       <section id="recent-announces">
-        <h1>お知らせ</h1>
+        <h1>ウェブサイトからのお知らせ</h1>
 
         {{#updates}}
           <ol class="post-list">
