Add Twitter button

--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -39,6 +39,12 @@
         </footer>
 
         $body
+
+        <?$permalink::is_permalink eq="1">
+          <aside class="social">
+            <p class="twitter"><a href="https://twitter.com/intent/tweet?text=$title&amp;via=hail2u_&amp;related=hail2unet">Share</a></p>
+          </aside>
+        </?>
       </article>
 
       <?$story_counter::count eq="1">
