--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -41,8 +41,8 @@
         $body
 
         <?$permalink::is_permalink eq="1">
-          <aside class="social">
-            <p class="twitter"><a href="https://twitter.com/intent/tweet?text=$title&amp;via=hail2u_&amp;related=hail2unet">Share</a></p>
+          <aside>
+            <p class="twitter-share"><a href="https://twitter.com/intent/tweet?text=$title&amp;via=hail2u_&amp;related=hail2unet">Share</a></p>
           </aside>
         </?>
       </article>
