Update Twitter Share label

--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -42,7 +42,7 @@
 
         <?$permalink::is_permalink eq="1">
           <aside>
-            <p class="twitter-share"><a href="https://twitter.com/intent/tweet?text=<@utils.encode_uri_component output="Yes">$title</@utils.encode_uri_component>&amp;url=<@utils.encode_uri_component output="Yes">$canonical::url</@utils.encode_uri_component>&amp;via=hail2u_&amp;related=hail2unet">Share</a></p>
+            <p class="twitter-share"><a href="https://twitter.com/intent/tweet?text=<@utils.encode_uri_component output="Yes">$title</@utils.encode_uri_component>&amp;url=<@utils.encode_uri_component output="Yes">$canonical::url</@utils.encode_uri_component>&amp;via=hail2u_&amp;related=hail2unet">Twitterでシェア</a></p>
           </aside>
         </?>
       </article>
