--- a/src/html/documents/index.mustache
+++ b/src/html/documents/index.mustache
@@ -14,16 +14,22 @@
 
     <main class="content" role="main">
       <section>
-        <h1 class="first-heading"><a href="/documents/markup.html">“マークアップ”するということ ～ HTML5勧告に寄せて ～</a></h1>
+        <h1 class="first-heading"><a href="/documents/democratic-design.html">民主的なデザイン</a></h1>
 
         <footer class="section-footer">
-          <p>Mark Things Up!</p>
+          <p>Democratic in Design World</p>
         </footer>
 
-        <p>HTMLを適切な要素を使って書いていくことは実はそれほど難しくはない。しかし過剰に要素を使わずに、かつスタイリングすることも意識して、と適切に“マークアップ”するのはなかなかの修練を必要とする。いったい“マークアップ”するということはどういうことなのだろうか、そしてどのような思考の元に行えば良いのだろうか。</p>
+        <p>民主的であるとは自由で平等であることとも定義することができます。デザインにおいて民主的であるとはいったいどういうことでしょうか。</p>
       </section>
 
       {{> google-adsense}}
+
+      <section>
+        <h1><a href="/documents/markup.html">“マークアップ”するということ ～ HTML5勧告に寄せて ～</a></h1>
+
+        <p>HTMLを適切な要素を使って書いていくことは実はそれほど難しくはない。しかし過剰に要素を使わずに、かつスタイリングすることも意識して、と適切に“マークアップ”するのはなかなかの修練を必要とする。いったい“マークアップ”するということはどういうことなのだろうか、そしてどのような思考の元に行えば良いのだろうか。</p>
+      </section>
 
       <section>
         <h1><a href="/documents/web-typography-best-practices.html">ウェブ・タイポグラフィーのベスト・プラクティス</a></h1>
