Delete Google Analytics code

--- a/src/html/about/index.mustache
+++ b/src/html/about/index.mustache
@@ -94,9 +94,7 @@
 
         <h2>訪問者の追跡</h2>
 
-        <p>訪問者の情報を<a href="https://www.google.com/analytics/">Google Analytics</a>を使って収集しています。Analyticsによるデータの収集はこのウェブサイト自身のクッキーを利用しているので、完全に無効化するには<a href="https://tools.google.com/dlpage/gaoptout">Google Analytics Opt-out Browser Add-on</a>をご使用のブラウザにインストールする必要があります。</p>
-
-        <p>その他にも使用しているソーシャル・メディアのウィジェット、例えば<a href="https://about.twitter.com/resources/buttons">Twitterの共有ボタン</a>等によりトラッキングが行われている可能性があります。ウィジェットによりオプトアウトする方法が異なるので、それぞれの提供元を参照してください。</p>
+        <p>訪問者の情報の追跡は独自にもGoogle Analyticsをはじめとした第三者の提供するサービスによっても特に行っていません。</p>
       </section>
 
       <section id="contact">
