Delete Google AdSense

--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -42,7 +42,17 @@
       </article>
 
       <?$story_counter::count eq="1">
-        {{> google-adsense}}
+        <aside class="ads">
+          <!-- Hail2u.net (Main) -->
+          <ins class="adsbygoogle"
+            style="display:block"
+            data-ad-client="ca-pub-8712792805045949"
+            data-ad-format="rectangle, horizontal"
+            data-ad-slot="1723739447"></ins>
+          <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+          </script>
+        </aside>
       </?>
 
       <?$back_and_forth::enabled eq="1">
@@ -53,8 +63,6 @@
       <?$categories::enabled eq="1">
           </ol>
         </section>
-
-        {{> google-adsense}}
       </?>
     </main>
 
