Delete script for Google AdSense

--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -42,6 +42,7 @@
       </article>
 
       <?$story_counter::count eq="1">
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
         <aside class="ads">
           <!-- Hail2u.net (Main) -->
           <ins class="adsbygoogle"
