--- a/src/html/about/index.mustache
+++ b/src/html/about/index.mustache
@@ -33,7 +33,7 @@
           <li><a href="/blog/feed" type="application/rss+xml">ウェブログの記事のみ</a></li>
         </ul>
 
-        <p>他に<a href="https://twitter.com/hail2unet" rel="alternate" type="text/html">Twitter</a>や<a href="https://www.facebook.com/hail2u.net" rel="alternate" type="text/html">Facebook</a>、<a href="http://u2liah.tumblr.com/" rel="alternate" type="text/html">Tumblr</a>、そして<a href="https://medium.com/@hail2unet" rel="alternate" type="text/html">Medium</a>でも購読することができます。</p>
+        <p>他に<a href="https://twitter.com/hail2unet" rel="alternate" type="text/html">Twitter</a>でもこのウェブサイトの更新情報他をツイートしています。また<a href="https://www.facebook.com/hail2u.net" rel="alternate" type="text/html">Facebook</a>、<a href="http://u2liah.tumblr.com/" rel="alternate" type="text/html">Tumblr</a>、そして<a href="https://medium.com/@hail2unet" rel="alternate" type="text/html">Medium</a>でもヘッドラインまたはほぼ完全なコピーを購読することができますが、これらに載った記事は最新の状態ではない可能性もあります。</p>
 
         <h2>ライセンス</h2>
 
