--- a/src/html/blog/index.mustache
+++ b/src/html/blog/index.mustache
@@ -39,7 +39,7 @@
       {{#articles}}
         {{#isFirstInYear}}
           <section id="on-{{year}}">
-            <h1>{{year}}年の記事</h1>
+            <h1><time>{{year}}</time></h1>
 
             <ol class="post-list">
         {{/isFirstInYear}}
