--- a/src/html/blog/index.mustache
+++ b/src/html/blog/index.mustache
@@ -47,7 +47,7 @@
         <li>
           <div class="info"><time class="date" datetime="{{html5PubDate}}">{{strPubDate}}</time>
             · <span class="tag"><a href="./{{cat}}/">{{category}}</a></span></div>
-          <a href="{{link}}">{{{title}}}</a>
+          <a href="{{link}}" title="{{title}}">{{{title}}}</a>
         </li>
 
         {{#isLastInYear}}
