--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -68,5 +68,5 @@
 <!-- blosxom categories_story -->
 <li>
   <div class="info"><time class="date" datetime="$yr-$mo_num-$da<?$fn>T</?>$ti<?$fn>:</?>00+09:00">$mo <@utils.strip_leading_zeros output="Yes">$da</@utils.strip_leading_zeros>, $yr</time></div>
-  <a href="$url$path/$fn.$default_flavour">$title</a>
+  <a href="$url$path/$fn.$default_flavour" title="$title">$title</a>
 </li>
