--- a/src/links/index.mustache
+++ b/src/links/index.mustache
@@ -53,7 +53,8 @@
         {{/isFirstInYear}}
 
         <li>
-          <div class="info"><time class="date" datetime="{{time}}">{{date}}</time></div>
+          <div class="info"><time class="date" datetime="{{time}}">{{date}}</time>
+            · <span class="tag">{{category}}</span></div>
           <a href="{{href}}" title="{{description}}&#x0a;{{extended}}">{{description}}</a>
         </li>
 
