Add links to navigation

--- a/src/html/partial/global-header.mustache
+++ b/src/html/partial/global-header.mustache
@@ -13,6 +13,8 @@
       {{/weblog}}
 
       {{^weblog}}<li><a href="/blog/">Weblog</a></li>{{/weblog}}
+      {{#links}}<li><mark>Links</mark></li>{{/links}}
+      {{^links}}<li><a href="/links/">Links</a></li>{{/links}}
       {{#about}}<li><mark>About</mark></li>{{/about}}
       {{^about}}<li><a href="/about/">About</a></li>{{/about}}
     </ul>
