Fix variable conflicts

--- a/src/html/links/index.mustache
+++ b/src/html/links/index.mustache
@@ -27,7 +27,7 @@
         </ul>
       </section>
 
-      {{#links}}
+      {{#bookmarks}}
         {{#isFirstInYear}}
           <section id="on-{{year}}">
             <h1><time>{{year}}</time></h1>
@@ -45,7 +45,7 @@
             </ol>
           </section>
         {{/isLastInYear}}
-      {{/links}}
+      {{/bookmarks}}
     </main>
 
     {{> site-search}}
