Remove extended from tooltip

--- a/src/html/links/index.mustache
+++ b/src/html/links/index.mustache
@@ -37,7 +37,7 @@
         <li>
           <div class="info"><time class="date" datetime="{{time}}">{{date}}</time>
             · <span class="tag">{{category}}</span></div>
-          <a href="{{href}}" title="{{description}}&#x0a;{{extended}}">{{description}}</a>
+          <a href="{{href}}" title="{{description}}">{{description}}</a>
         </li>
 
         {{#isLastInYear}}
