--- a/src/html/links/index.mustache
+++ b/src/html/links/index.mustache
@@ -35,9 +35,8 @@
         {{/isFirstInYear}}
 
         <li>
-          <div class="info"><time class="date" datetime="{{time}}">{{date}}</time>
-            · <span class="tag">{{category}}</span></div>
-          <a href="{{href}}" title="{{description}}">{{description}}</a>
+          <div class="info"><time class="date" datetime="{{time}}">{{date}}</time></div>
+          <a href="{{href}}" title="{{description}}">{{category}} {{description}}</a>
         </li>
 
         {{#isLastInYear}}
