Use mustache instead of handlebars

--- a/src/html/about/index.mustache
+++ b/src/html/about/index.mustache
@@ -65,7 +65,7 @@
             <li><a href="http://www.gimp.org/">GIMP</a></li>
             <li><a href="http://git-scm.com/">Git</a></li>
             <li><a href="http://gruntjs.com/">Grunt</a></li>
-            <li><a href="http://handlebarsjs.com/">Handlebars.js</a></li>
+            <li><a href="https://github.com/janl/mustache.js">mustache</a></li>
             <li><a href="http://www.imagemagick.org/">ImageMagick</a></li>
             <li><a href="http://inkscape.org/">Inkscape</a></li>
             <li><a href="http://jpegclub.org/jpegtran/">jpegtran</a></li>
