--- a/src/html/documents/index.mustache
+++ b/src/html/documents/index.mustache
@@ -14,7 +14,7 @@
 
     <main class="content" role="main">
       <section>
-        <h1 class="first-heading"><a href="/documents/democratic-design.html" title="民主的なデザイン">民主的なデザイン</a></h1>
+        <h1 class="first-heading"><a href="/documents/democratic-design.html">民主的なデザイン</a></h1>
 
         <footer class="section-footer">
           <p>Published at <time class="date" datetime="2015-12-22T17:21:23+09:00">2015/12/22</time></p>
@@ -27,10 +27,10 @@
         <h1><time>2014</time></h1>
 
         <ol class="post-list">
-          <li><a href="/documents/markup.html" title="“マークアップ”するということ ～ HTML5勧告に寄せて ～">“マークアップ”するということ ～ HTML5勧告に寄せて ～</a></li>
-          <li><a href="/documents/web-typography-best-practices.html" title="ウェブ・タイポグラフィーのベスト・プラクティス">ウェブ・タイポグラフィーのベスト・プラクティス</a></li>
-          <li><a href="/documents/bulletproof-icon-fonts.html" title="安全でアクセシブルなアイコン・フォント">安全でアクセシブルなアイコン・フォント</a></li>
-          <li><a href="/documents/sass-guide-ja.html" title="Sassの基本">Sassの基本</a></li>
+          <li><a href="/documents/markup.html">“マークアップ”するということ ～ HTML5勧告に寄せて ～</a></li>
+          <li><a href="/documents/web-typography-best-practices.html">ウェブ・タイポグラフィーのベスト・プラクティス</a></li>
+          <li><a href="/documents/bulletproof-icon-fonts.html">安全でアクセシブルなアイコン・フォント</a></li>
+          <li><a href="/documents/sass-guide-ja.html">Sassの基本</a></li>
         </ol>
       </section>
 
@@ -38,13 +38,13 @@
         <h1><time>2013</time></h1>
 
         <ol class="post-list">
-          <li><a href="/documents/css-postprocessor-era.html" title="CSSポストプロセッサー時代の到来">CSSポストプロセッサー時代の到来</a></li>
-          <li><a href="/documents/cutting-down-on-vendor-prefixes.html" title="ベンダー拡張プリフィックスヲ削減セヨ">ベンダー拡張プリフィックスヲ削減セヨ</a></li>
-          <li><a href="/documents/think-of-the-beginners.html" title="初心者のことを考えよう">初心者のことを考えよう</a></li>
-          <li><a href="/documents/favicon-cheat-sheet-ja.html" title="ファビコン・カンニング・ペーパー">ファビコン・カンニング・ペーパー</a></li>
-          <li><a href="/documents/what-should-you-say-when-your-app-goes-down.html" title="あなたのサービスが落ちた時にユーザーになんと言うべきでしょうか？">あなたのサービスが落ちた時にユーザーになんと言うべきでしょうか？</a></li>
-          <li><a href="/documents/html-img-alt.html" title="HTMLにおけるimg要素のalt属性">HTMLにおけるimg要素のalt属性</a></li>
-          <li><a href="/documents/translation-is-easy-really.html" title="翻訳は簡単だよ、本当に">翻訳は簡単だよ、本当に</a></li>
+          <li><a href="/documents/css-postprocessor-era.html">CSSポストプロセッサー時代の到来</a></li>
+          <li><a href="/documents/cutting-down-on-vendor-prefixes.html">ベンダー拡張プリフィックスヲ削減セヨ</a></li>
+          <li><a href="/documents/think-of-the-beginners.html">初心者のことを考えよう</a></li>
+          <li><a href="/documents/favicon-cheat-sheet-ja.html">ファビコン・カンニング・ペーパー</a></li>
+          <li><a href="/documents/what-should-you-say-when-your-app-goes-down.html">あなたのサービスが落ちた時にユーザーになんと言うべきでしょうか？</a></li>
+          <li><a href="/documents/html-img-alt.html">HTMLにおけるimg要素のalt属性</a></li>
+          <li><a href="/documents/translation-is-easy-really.html">翻訳は簡単だよ、本当に</a></li>
         </ol>
       </section>
 
@@ -52,9 +52,9 @@
         <h1><time>2012</time></h1>
 
         <ol class="post-list">
-          <li><a href="/documents/style-repository.html" title="スタイル・リポジトリ">スタイル・リポジトリ</a></li>
-          <li><a href="/documents/rdfa-lite-20120607.html" title="抄訳 RDFa Lite 1.1">抄訳 RDFa Lite 1.1</a></li>
-          <li><a href="/documents/learn-you-a-flexbox-for-great-good.html" title="Flexbox、おもしろいですよ？">Flexbox、おもしろいですよ？</a></li>
+          <li><a href="/documents/style-repository.html">スタイル・リポジトリ</a></li>
+          <li><a href="/documents/rdfa-lite-20120607.html">抄訳 RDFa Lite 1.1</a></li>
+          <li><a href="/documents/learn-you-a-flexbox-for-great-good.html">Flexbox、おもしろいですよ？</a></li>
         </ol>
       </section>
 
@@ -62,11 +62,11 @@
         <h1><time>2011</time></h1>
 
         <ol class="post-list">
-          <li><a href="/documents/ala-getting-started-with-sass.html" title="Sassで行こう！">Sassで行こう！</a></li>
-          <li><a href="/documents/ala-whitespace.html" title="余白の美">余白の美</a></li>
-          <li><a href="/documents/sass-tutorial.html" title="Sass - チュートリアル">Sass - チュートリアル</a></li>
-          <li><a href="/documents/sass-and-sassy-css.html" title="Sass、そしてSassy CSS (SCSS)">Sass、そしてSassy CSS (SCSS)</a></li>
-          <li><a href="/documents/diveintohtml5-semantics.html" title="結局どうすればいいの？ - Dive Into HTML5">結局どうすればいいの？ - Dive Into HTML5</a></li>
+          <li><a href="/documents/ala-getting-started-with-sass.html">Sassで行こう！</a></li>
+          <li><a href="/documents/ala-whitespace.html">余白の美</a></li>
+          <li><a href="/documents/sass-tutorial.html">Sass - チュートリアル</a></li>
+          <li><a href="/documents/sass-and-sassy-css.html">Sass、そしてSassy CSS (SCSS)</a></li>
+          <li><a href="/documents/diveintohtml5-semantics.html">結局どうすればいいの？ - Dive Into HTML5</a></li>
         </ol>
       </section>
 
@@ -74,9 +74,9 @@
         <h1><time>2009</time></h1>
 
         <ol class="post-list">
-          <li><a href="/documents/adding-meaning-to-your-http-error-pages.html" title="HTTPエラーページに意味を持たせよう">HTTPエラーページに意味を持たせよう</a></li>
-          <li><a href="/documents/git-cheat-sheets-jp.html" title="Git Cheat Sheets JP">Git Cheat Sheets JP</a></li>
-          <li><a href="/documents/version-control-for-designers.html" title="Version Control for Designers">Version Control for Designers</a></li>
+          <li><a href="/documents/adding-meaning-to-your-http-error-pages.html">HTTPエラーページに意味を持たせよう</a></li>
+          <li><a href="/documents/git-cheat-sheets-jp.html">Git Cheat Sheets JP</a></li>
+          <li><a href="/documents/version-control-for-designers.html">Version Control for Designers</a></li>
         </ol>
       </section>
 
@@ -84,7 +84,7 @@
         <h1><time>2008</time></h1>
 
         <ol class="post-list">
-          <li><a href="/documents/sortable-pokemon-list.html" title="ソート機能付き ポケモン一覧表">ソート機能付き ポケモン一覧表</a></li>
+          <li><a href="/documents/sortable-pokemon-list.html">ソート機能付き ポケモン一覧表</a></li>
         </ol>
       </section>
 
@@ -92,19 +92,19 @@
         <h1>～ <time>2007</time></h1>
 
         <ol class="post-list">
-          <li><a href="/documents/216colors.html" title="216 cross platform colors table">216 cross platform colors table</a></li>
-          <li><a href="/documents/about-rss.html" title="RSSについて">RSSについて</a></li>
-          <li><a href="/documents/atom02spec.html" title="Atom 0.2 Spec日本語 HTML 版">Atom 0.2 Spec日本語 HTML 版</a></li>
-          <li><a href="/documents/cairs.html" title="Complex @import rules">Complex @import rules</a></li>
-          <li><a href="/documents/css2bsi.html" title="CSS2 browser support information">CSS2 browser support information</a></li>
-          <li><a href="/documents/css2pt.html" title="CSS2 property table">CSS2 property table</a></li>
-          <li><a href="/documents/entities.html" title="Character entities table">Character entities table</a></li>
-          <li><a href="/documents/httpstatus.html" title="HTTP status message list">HTTP status message list</a></li>
-          <li><a href="/documents/opjsdom.html" title="Support for JavaScript and JScript Objects in Opera">Support for JavaScript and JScript Objects in Opera</a></li>
-          <li><a href="/documents/opml_spec.html" title="OPML 1.0 Specificationの勝手な日本語訳">OPML 1.0 Specificationの勝手な日本語訳</a></li>
-          <li><a href="/documents/ps_lightning.html" title="Draw lightning in Photoshop 7">Draw lightning in Photoshop 7</a></li>
-          <li><a href="/documents/ps_sketchpbyp.html" title="Sketch photo by pencil in Photoshop 7">Sketch photo by pencil in Photoshop 7</a></li>
-          <li><a href="/documents/rss20notes.html" title="RSS 2.0 Notes">RSS 2.0 Notes</a></li>
+          <li><a href="/documents/216colors.html">216 cross platform colors table</a></li>
+          <li><a href="/documents/about-rss.html">RSSについて</a></li>
+          <li><a href="/documents/atom02spec.html">Atom 0.2 Spec日本語 HTML 版</a></li>
+          <li><a href="/documents/cairs.html">Complex @import rules</a></li>
+          <li><a href="/documents/css2bsi.html">CSS2 browser support information</a></li>
+          <li><a href="/documents/css2pt.html">CSS2 property table</a></li>
+          <li><a href="/documents/entities.html">Character entities table</a></li>
+          <li><a href="/documents/httpstatus.html">HTTP status message list</a></li>
+          <li><a href="/documents/opjsdom.html">Support for JavaScript and JScript Objects in Opera</a></li>
+          <li><a href="/documents/opml_spec.html">OPML 1.0 Specificationの勝手な日本語訳</a></li>
+          <li><a href="/documents/ps_lightning.html">Draw lightning in Photoshop 7</a></li>
+          <li><a href="/documents/ps_sketchpbyp.html">Sketch photo by pencil in Photoshop 7</a></li>
+          <li><a href="/documents/rss20notes.html">RSS 2.0 Notes</a></li>
         </ol>
       </section>
     </main>
