--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -38,7 +38,7 @@
             {{#item}}
               <li>
                 <div class="info"><time class="date" datetime="{{html5PubDate}}">{{strPubDate}}</time></div>
-                <a href="{{link}}" title="{{title}}">{{title}}</a>
+                <a href="{{link}}">{{title}}</a>
               </li>
             {{/item}}
           </ol>
@@ -53,7 +53,7 @@
             {{#item}}
               <li>
                 <div class="info"><time class="date" datetime="{{html5PubDate}}">{{strPubDate}}</time></div>
-                <a href="{{link}}" title="{{title}}">{{title}}</a>
+                <a href="{{link}}">{{title}}</a>
               </li>
             {{/item}}
           </ol>
