--- a/src/html/links/index.mustache
+++ b/src/html/links/index.mustache
@@ -36,7 +36,7 @@
 
         <li>
           <div class="info"><time class="date" datetime="{{time}}">{{date}}</time></div>
-          <a href="{{href}}" title="{{description}}">{{category}} {{description}}</a>
+          <a href="{{href}}">{{category}} {{description}}</a>
         </li>
 
         {{#isLastInYear}}
