Link to like or so URL

--- a/src/html/links/index.mustache
+++ b/src/html/links/index.mustache
@@ -18,11 +18,11 @@
 
         <ul class="flat-list">
           <li><a href="https://pinboard.in/u:hail2u/">Pinboard</a></li>
-          <li><a href="https://github.com/hail2u">GitHub</a></li>
-          <li><a href="https://instagram.com/hail2u_">Instagram</a></li>
-          <li><a href="https://www.pinterest.com/hail2u/">Pinterest</a></li>
-          <li><a href="https://soundcloud.com/hail2u_">SoundCloud</a></li>
-          <li><a href="https://vimeo.com/hail2u">Vimeo</a></li>
+          <li><a href="https://github.com/stars/hail2u">GitHub</a></li>
+          <li><a href="https://instagram.com/hail2u_/">Instagram</a></li>
+          <li><a href="https://www.pinterest.com/hail2u/pins/">Pinterest</a></li>
+          <li><a href="https://soundcloud.com/haiil2u/likes">SoundCloud</a></li>
+          <li><a href="https://vimeo.com/hail2u/likes">Vimeo</a></li>
         </ul>
       </section>
 
