Add icon with CSS

--- a/src/html/links/index.mustache
+++ b/src/html/links/index.mustache
@@ -7,6 +7,40 @@
 
     {{> link}}
     {{> script}}
+
+    <style>
+      .post-list li a:before {
+        letter-spacing: .5em;
+      }
+
+      .github a:before {
+        content: "★";
+      }
+
+      .instagram a:before {
+        content: "📷";
+      }
+
+      .other a:before {
+        content: "📑";
+      }
+
+      .pinboard a:before {
+        content: "🔗";
+      }
+
+      .pinterest a:before {
+        content: "📍";
+      }
+
+      .soundcloud a:before {
+        content: "📢";
+      }
+
+      .vimeo a:before {
+        content: "🎥";
+      }
+    </style>
   </head>
 
   <body>
@@ -34,9 +68,9 @@
             <ol class="post-list">
         {{/isFirstInYear}}
 
-        <li>
+        <li class="{{category}}">
           <div class="info"><time class="date" datetime="{{time}}">{{date}}</time></div>
-          <a href="{{href}}">{{category}} {{description}}</a>
+          <a href="{{href}}">{{description}}</a>
         </li>
 
         {{#isLastInYear}}
