Make the date the same formatting

--- a/src/html/documents/index.mustache
+++ b/src/html/documents/index.mustache
@@ -17,7 +17,7 @@
         <h1 class="first-heading"><a href="/documents/democratic-design.html">民主的なデザイン</a></h1>
 
         <footer class="section-footer">
-          <p>Published at <time class="date" datetime="2015-12-22T17:21:23+09:00">2015/12/22</time></p>
+          <p><time class="date" datetime="2015-12-22T17:21:23+09:00">Dec 22, 2015</time></p>
         </footer>
 
         <p>民主的であるとは自由で平等であることとも定義することができます。デザインにおいて民主的であるとはいったいどういうことでしょうか。</p>
