Remove Twitter, Facebook, and Medium

--- a/src/html/about/index.mustache
+++ b/src/html/about/index.mustache
@@ -33,8 +33,6 @@
             <li><a href="/feed" rel="alternate" type="application/rss+xml">ウェブサイトの更新情報とウェブログの記事</a></li>
             <li><a href="/blog/feed" type="application/rss+xml">ウェブログの記事のみ</a></li>
           </ul>
-
-          <p>他に<a href="https://twitter.com/hail2unet" rel="alternate" type="text/html">Twitter</a>でもこのウェブサイトの更新情報他をツイートしています。また<a href="https://www.facebook.com/hail2u.net" rel="alternate" type="text/html">Facebook</a>、<a href="http://u2liah.tumblr.com/" rel="alternate" type="text/html">Tumblr</a>、そして<a href="https://medium.com/@hail2unet" rel="alternate" type="text/html">Medium</a>でもヘッドラインまたはほぼ完全なコピーを購読することができますが、これらに載った記事は最新の状態ではない可能性もあります。</p>
         </section>
 
         <section>
@@ -100,7 +98,7 @@
       <section id="contact">
         <h1>問い合わせ</h1>
 
-        <p>このウェブサイト内のコンテンツについて報告や問い合わせ・クレーム等がある場合は、<a href="mailto:hi@hail2u.net">メール</a>で連絡してください。<a href="https://twitter.com/hail2unet">Twitterでの@ツイート</a>や<a href="https://www.facebook.com/hail2u.net">Facebookでのメッセージ</a>でも構いません。</p>
+        <p>このウェブサイト内のコンテンツについて報告や問い合わせ・クレーム等がある場合は、<a href="mailto:hi@hail2u.net">メール</a>で連絡してください。</p>
       </section>
     </main>
 
