--- a/src/html/about/index.mustache
+++ b/src/html/about/index.mustache
@@ -91,7 +91,7 @@
         <section>
           <h1>マークアップとスタイルシート</h1>
 
-          <p>マークアップは<a href="https://html.spec.whatwg.org/multipage/">HTML Standard</a>に従って行っています。スタイルシートはSassの<a href="https://sass-lang.com/documentation/file.SASS_REFERENCE.html#syntax">SCSS文法</a>で書き、CSSへ変換しています。両者のより詳細な解説とプレビューとして<a href="/about/style-guide/">Style Guide</a>を用意してあるので、そちらも参照してください。何か問題を見つけた場合は<a href="#contact">問い合わせ</a>より教えてくれると助かります。</p>
+          <p>マークアップは<a href="https://html.spec.whatwg.org/multipage/">HTML Standard</a>に従って行っています。スタイルシートはSassの<a href="https://sass-lang.com/documentation/file.SASS_REFERENCE.html#syntax">SCSS文法</a>で書き、CSSへ変換しています。両者のより詳細な解説とプレビューとして<a href="/about/style-guide/">Style Guide</a>を用意してあるので、そちらも参照してください。</p>
         </section>
       </section>
 
