--- a/src/html/links/index.mustache
+++ b/src/html/links/index.mustache
@@ -25,6 +25,10 @@
         content: "📷";
       }
 
+      .instapaper a:before {
+        content: "📰";
+      }
+
       .other a:before {
         content: "📑";
       }
@@ -59,6 +63,7 @@
           <li><a href="https://dribbble.com/hail2u/likes">Dribbble</a></li>
           <li><a href="https://github.com/stars/hail2u">GitHub</a></li>
           <li><a href="https://instagram.com/hail2u_/">Instagram</a></li>
+          <li><a href="https://www.instapaper.com/p/hail2u">Instapaper</a></li>
           <li><a href="https://www.pinterest.com/hail2u/pins/">Pinterest</a></li>
           <li><a href="https://soundcloud.com/haiil2u/likes">SoundCloud</a></li>
           <li><a href="https://vimeo.com/hail2u/likes">Vimeo</a></li>
