Add icon to sources

--- a/src/html/links/index.mustache
+++ b/src/html/links/index.mustache
@@ -9,6 +9,7 @@
     {{> script}}
 
     <style>
+      .flat-list li a:before,
       .post-list li a:before {
         letter-spacing: .5em;
       }
@@ -59,14 +60,14 @@
         <h1 class="first-heading">Sources</h1>
 
         <ul class="flat-list">
-          <li><a href="https://pinboard.in/u:hail2u/">Pinboard</a></li>
-          <li><a href="https://dribbble.com/hail2u/likes">Dribbble</a></li>
-          <li><a href="https://github.com/stars/hail2u">GitHub</a></li>
-          <li><a href="https://instagram.com/hail2u_/">Instagram</a></li>
-          <li><a href="https://www.instapaper.com/p/hail2u">Instapaper</a></li>
-          <li><a href="https://www.pinterest.com/hail2u/pins/">Pinterest</a></li>
-          <li><a href="https://soundcloud.com/haiil2u/likes">SoundCloud</a></li>
-          <li><a href="https://vimeo.com/hail2u/likes">Vimeo</a></li>
+          <li class="pinboard"><a href="https://pinboard.in/u:hail2u/">Pinboard</a></li>
+          <li class="dribbble"><a href="https://dribbble.com/hail2u/likes">Dribbble</a></li>
+          <li class="github"><a href="https://github.com/stars/hail2u">GitHub</a></li>
+          <li class="instagram"><a href="https://instagram.com/hail2u_/">Instagram</a></li>
+          <li class="instapaper"><a href="https://www.instapaper.com/p/hail2u">Instapaper</a></li>
+          <li class="pinterest"><a href="https://www.pinterest.com/hail2u/pins/">Pinterest</a></li>
+          <li class="soundcloud"><a href="https://soundcloud.com/haiil2u/likes">SoundCloud</a></li>
+          <li class="vimeo"><a href="https://vimeo.com/hail2u/likes">Vimeo</a></li>
         </ul>
       </section>
 
