Update style sheet references

--- a/src/html/partial/link.mustache
+++ b/src/html/partial/link.mustache
@@ -10,4 +10,5 @@
 
 {{#weblog_child}}<?$back_and_forth::enabled eq="1">$back_and_forth::link_next</?>{{/weblog_child}}
 
-<link href="/styles/style.min.css" rel="stylesheet">
+<link href="/styles/style.min.css" media="not print" rel="stylesheet">
+<link href="/styles/print.min.css" media="only print" rel="stylesheet">
