Remove underline from links’ sources

--- a/src/html/links/index.mustache
+++ b/src/html/links/index.mustache
@@ -9,6 +9,10 @@
     {{> script}}
 
     <style>
+      .flat-list a {
+        text-decoration: none;
+      }
+
       .flat-list li a:before,
       .post-list li a:before {
         letter-spacing: .5em;
