Rename CSS files

--- a/src/html/partial/link.mustache
+++ b/src/html/partial/link.mustache
@@ -10,6 +10,6 @@
 
 {{#weblog_child}}<?$back_and_forth::enabled eq="1">$back_and_forth::link_next</?>{{/weblog_child}}
 
-<link href="/styles/style.min.css" media="not print" rel="stylesheet">
+<link href="/styles/common.min.css" media="not print" rel="stylesheet">
 <link href="/styles/{{#home}}home{{/home}}{{#documents}}documents{{/documents}}{{#weblog}}{{#weblog_child}}permalinks{{/weblog_child}}{{^weblog_child}}weblog{{/weblog_child}}{{/weblog}}{{#links}}links{{/links}}{{#about}}about{{/about}}.min.css" media="not print" rel="stylesheet">
 <link href="/styles/print.min.css" media="only print" rel="stylesheet">
