Load JS files individually

--- a/src/html/partial/script.mustache
+++ b/src/html/partial/script.mustache
@@ -1,1 +1,2 @@
-<script async src="/scripts/{{script}}.min.js"></script>
+<script async src="/scripts/ellipsis-title.min.js"></script>
+<script async src="/scripts/unutm.min.js"></script>
