Optimize file layout

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -1,6 +1,6 @@
 // Root
 :root {
-  @import "assets/partials/hail2u-scss-partials/vendor-extension";
+  @import "../../node_modules/hail2u-scss-partials/vendor-extension";
   @include font-feature-settings("kern" 1, "lnum" 1, "pnum" 1);
 
   font-family: $font-stack-sans-serif;
@@ -69,7 +69,7 @@ hr {
 }
 
 pre {
-  @import "assets/partials/hail2u-scss-partials/vendor-extension";
+  @import "../../node_modules/hail2u-scss-partials/vendor-extension";
   @extend %margin;
   @include font-feature-settings("zero" 1);
 
@@ -197,7 +197,7 @@ code,
 var,
 samp,
 kbd {
-  @import "assets/partials/hail2u-scss-partials/vendor-extension";
+  @import "../../node_modules/hail2u-scss-partials/vendor-extension";
   @include font-feature-settings("zero" 1);
 
   font-family: $font-stack-monospace;
@@ -246,7 +246,7 @@ video {
 
 // Tabular Data
 table {
-  @import "assets/partials/hail2u-scss-partials/vendor-extension";
+  @import "../../node_modules/hail2u-scss-partials/vendor-extension";
   @extend %margin;
   @include font-feature-settings("tnum" 1);
 
