--- a/src/css/natural.scss
+++ b/src/css/natural.scss
@@ -16,8 +16,8 @@ $width: 45em;
 
 
 // Imports
-@import "assets/partials/hail2u-scss-partials/clearfix";
-@import "assets/partials/hail2u-scss-partials/natural";
+@import "../../node_modules/hail2u-scss-partials/clearfix";
+@import "../../node_modules/hail2u-scss-partials/natural";
 
 
 // Styles
@@ -115,7 +115,7 @@ $breakpoint: ($font-size + $indent + $width + $font-size);
 
 
 // Print
-@import "assets/partials/hail2u-scss-partials/black-prints";
+@import "../../node_modules/hail2u-scss-partials/black-prints";
 
 @media print {
   @include black-prints;
