--- a/src/css/_init.scss
+++ b/src/css/_init.scss
@@ -1,10 +1,10 @@
 // Init
 
 // Function
-@import "assets/partials/hail2u-scss-functions/color/encode-color";
-@import "assets/partials/hail2u-scss-functions/number/pow";
-@import "assets/partials/hail2u-scss-functions/number/rem";
-@import "assets/partials/hail2u-scss-functions/number/remove-unit";
+@import "../../node_modules/hail2u-scss-functions/color/encode-color";
+@import "../../node_modules/hail2u-scss-functions/number/pow";
+@import "../../node_modules/hail2u-scss-functions/number/rem";
+@import "../../node_modules/hail2u-scss-functions/number/remove-unit";
 
 
 // Variable
