--- a/src/css/class/_clearfix.scss
+++ b/src/css/class/_clearfix.scss
@@ -1,5 +1,5 @@
 // Clearfix
 %clearfix {
-  @import "../assets/partials/hail2u-scss-partials/clearfix";
+  @import "../../../node_modules/hail2u-scss-partials/clearfix";
   @include microclearfix-block;
 }
