--- a/src/css/class/_link.scss
+++ b/src/css/class/_link.scss
@@ -6,7 +6,7 @@
   @supports (-moz-text-decoration-color: red) or
     (-webkit-text-decoration-color: red) or
     (text-decoration-color: red) {
-    @import "../assets/partials/hail2u-scss-partials/vendor-extension";
+    @import "../../../node_modules/hail2u-scss-partials/vendor-extension";
     @include text-decoration-color($color-primary-light);
 
     color: inherit;
