Increase white spaces around hr

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -51,8 +51,6 @@ p {
 }
 
 hr {
-  @extend %margin;
-
   background-color: transparent;
   border: 0;
   box-sizing: content-box;
@@ -61,6 +59,7 @@ hr {
   font-size: rem($ratio-text-hr);
   height: rem($ratio-text-hr);
   line-height: 1;
+  margin: $margin-large 0;
   text-align: center;
 
   &::before {
