--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -7,21 +7,31 @@
 
 @import "init";
 
+
+// Core
 @import "core";
 
+
+// Global Header
 @import "global-header";
 @import "global-header/logo";
 @import "global-header/site-navigation";
 @import "global-header/tagline";
 
+
+// Content
 @import "content";
 @import "content/first-heading";
 @import "content/section-footer";
 @import "content/article";
 
+
+// Global Footer
 @import "global-footer";
 @import "global-footer/footlinks";
 @import "global-footer/byline";
 
+
+// Subcontent
 @import "subcontent";
 @import "subcontent/site-search";
