--- a/src/css/permalink.scss
+++ b/src/css/permalink.scss
@@ -7,9 +7,13 @@
 
 @import "init";
 
+
+// Content
 @import "content/first-heading-permalink";
 @import "content/section-footer-permalink";
 
+
+// Widget
 @import "widget/bordered";
 @import "widget/drop";
 @import "widget/fill";
