--- a/src/css/style-guide.scss
+++ b/src/css/style-guide.scss
@@ -7,9 +7,13 @@
 
 @import "init";
 
+
+// Content
 @import "content/first-heading-permalink";
 @import "content/section-footer-permalink";
 
+
+// Widget
 @import "widget/bordered";
 @import "widget/drop";
 @import "widget/fill";
@@ -24,4 +28,6 @@
 @import "widget/sidenote";
 @import "widget/topic";
 
+
+// Debug
 @import "debug";
