--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -25,7 +25,7 @@ h1 {
   @extend %link-underline-removal;
 
   font-size: rem($ratio-text-h1);
-  margin: $margin-top-h1 0 $margin-tiny;
+  margin: $margin-top-h1 0 $margin;
 
   @media (min-width: $breakpoint-full) {
     margin-left: (- ($width-supplement + $width-gap-large));
@@ -36,6 +36,7 @@ article,
 section {
   section h1 {
     font-size: rem($ratio-text-large);
+    margin-bottom: $margin-tiny;
     margin-top: $margin-huge;
 
     @media (min-width: $breakpoint-full) {
