Make room in First Heading for Section Footer

--- a/src/css/content/_first-heading.scss
+++ b/src/css/content/_first-heading.scss
@@ -7,6 +7,7 @@
   }
 
   @media (min-width: $breakpoint-full) {
+    margin-right: $width-protrusion-full;
     margin-top: ($margin-top-h1 + $margin-top-tagline-full);
   }
 }
