Add linter as test

--- a/src/css/var/_color.scss
+++ b/src/css/var/_color.scss
@@ -1,16 +1,14 @@
 // Basic
+$black: rgb(0, 0, 0);
+$white: rgb(255, 255, 255);
 $color-dark: rgb(60, 51, 48);
 $color-light: rgb(252, 249, 240);
 
-// scss-lint:disable ColorVariable
-$color-dark-dark: mix($color-dark, rgb(0, 0, 0));
-// scss-lint:enable ColorVariable
+$color-dark-dark: mix($color-dark, $black);
 $color-dark-light: mix($color-dark, $color-light, 80%);
 
 $color-light-dark: mix($color-dark, $color-light, 20%);
-// scss-lint:disable ColorVariable
-$color-light-light: mix($color-light, rgb(255, 255, 255));
-// scss-lint:enable ColorVariable
+$color-light-light: mix($color-light, $white);
 
 
 // Accent
