--- a/src/html/404.mustache
+++ b/src/html/404.mustache
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width" name="viewport">
 
-    <title>404 Not Found - Hail2u.net</title>
+    <title>{{short_title}} - {{site_title}}</title>
 
     <style>
       html {
@@ -40,10 +40,6 @@
         font-weight: 400;
         line-height: 1;
         margin: 0;
-      }
-
-      .code {
-        font-weight: 700;
       }
 
       .description {
@@ -112,23 +108,19 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="title"><span class="code">404</span> Not Found</h1>
+        <h1 class="title">{{short_title}}</h1>
       </header>
 
-      <p class="description">あなたがお探しのページは見つかりませんでした。以下のフォームよりこのウェブサイト全体を検索してみてください。</p>
+      <p class="description">{{description}}</p>
 
-      <form class="site-search" action="https://duckduckgo.com/" role="search">
-        <input name="sites" type="hidden" value="hail2u.net">
-        <input class="query" name="q" size="32" type="search">
-        <input class="button" type="submit" value="検索">
-      </form>
+      {{> site-search}}
 
       <footer>
         <ul class="footlinks">
           <li><a href="/about/#contact">Contact</a></li>
         </ul>
 
-        <p class="home"><a href="/">Hail2u.net</a></p>
+        <p class="home"><a href="/">{{site_title}}</a></p>
       </footer>
     </div>
   </body>
