--- a/src/css/weblog.scss
+++ b/src/css/weblog.scss
@@ -5,7 +5,10 @@
  * Licensed under MIT: http://hail2u.mit-license.org/2011
  */
 
+// Initialize
 @import "init";
 
+
+// Widget
 @import "widget/flat-list";
 @import "widget/post-list";
