--- a/src/html/about/index.mustache
+++ b/src/html/about/index.mustache
@@ -55,10 +55,7 @@
             <li><a href="http://blosxom.sourceforge.net/">Blosxom</a></li>
             <li><a href="https://github.com/hail2u/node-css-mqpacker">CSS MQPacker</a></li>
             <li><a href="https://github.com/hail2u/node-csswring">CSSWring</a></li>
-            <li><a href="https://fontforge.github.io/en-US/">FontForge</a></li>
-            <li><a href="http://www.gimp.org/">GIMP</a></li>
             <li><a href="http://git-scm.com/">Git</a></li>
-            <li><a href="http://gruntjs.com/">Grunt</a></li>
             <li><a href="https://github.com/janl/mustache.js">mustache</a></li>
             <li><a href="http://www.imagemagick.org/">ImageMagick</a></li>
             <li><a href="http://inkscape.org/">Inkscape</a></li>
@@ -66,13 +63,12 @@
             <li><a href="http://daringfireball.net/projects/markdown/">Markdown</a></li>
             <li><a href="https://nodejs.org/">Node.js</a></li>
             <li><a href="http://optipng.sourceforge.net/">OptiPNG</a></li>
+            <li><a href="http://www.adobe.com/jp/products/photoshop.html">Photoshop</a></li>
             <li><a href="https://pngquant.org/">pngquant</a></li>
             <li><a href="http://sass-lang.com/">Sass</a></li>
-            <li><a href="https://people.mozilla.org/~jkew/woff/">sfnt2woff</a></li>
             <li><a href="https://github.com/svg/svgo">SVGO</a></li>
             <li><a href="http://lisperator.net/uglifyjs/">UglifyJS</a></li>
             <li><a href="http://www.vim.org/">Vim</a></li>
-            <li><a href="https://github.com/google/woff2">woff2</a></li>
           </ul>
         </section>
 
@@ -87,7 +83,7 @@
         <section>
           <h1>マークアップとスタイルシート</h1>
 
-          <p>マークアップは<a href="https://html.spec.whatwg.org/multipage/">HTML Standard</a>に従って行っています。スタイルシートはSassの<a href="https://sass-lang.com/documentation/file.SASS_REFERENCE.html#syntax">SCSS文法</a>で書き、CSSへ変換しています。両者のより詳細な解説とプレビューとして<a href="/about/style-guide/">Style Guide</a>を用意してあるので、そちらも参照してください。</p>
+          <p>マークアップは<a href="https://html.spec.whatwg.org/multipage/">HTML Standard</a>に従って行っています。スタイルシートはSassで書き、CSSへ変換しています。両者のより詳細な解説とプレビューとして<a href="/about/style-guide/">Style Guide</a>を用意してあるので、そちらも参照してください。</p>
         </section>
       </section>
 
