Add head partial

--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -3,14 +3,7 @@
 <!-- blosxom head -->
 <!DOCTYPE html>
 <html lang="$blog_language"<?$permalink::is_permalink eq="1"> class="permalink"</?>>
-  <head>
-    {{> meta}}
-
-    <title>$categories::title$categories::title_sep$permalink::title$permalink::title_sep$blog_title - {{site_title}}</title>
-
-    {{> link}}
-    {{> script}}
-  </head>
+  {{> head}}
 
   <body>
     {{> global-header}}
