--- a/src/html/about/index.mustache
+++ b/src/html/about/index.mustache
@@ -1,13 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
-    {{> meta}}
-
-    <title>{{short_title}} - {{site_title}}</title>
-
-    {{> link}}
-    {{> script}}
-  </head>
+  {{> head}}
 
   <body>
     {{> global-header}}
