--- a/src/html/links/index.mustache
+++ b/src/html/links/index.mustache
@@ -1,60 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
-    {{> meta}}
-
-    <title>{{short_title}} - {{site_title}}</title>
-
-    {{> link}}
-    {{> script}}
-
-    <style>
-      .flat-list a {
-        text-decoration: none;
-      }
-
-      .flat-list li a:before,
-      .post-list li a:before {
-        letter-spacing: .5em;
-      }
-
-      .dribbble a:before {
-        content: "🏀";
-      }
-
-      .github a:before {
-        content: "★";
-      }
-
-      .instagram a:before {
-        content: "📷";
-      }
-
-      .instapaper a:before {
-        content: "📰";
-      }
-
-      .other a:before {
-        content: "📑";
-      }
-
-      .pinboard a:before {
-        content: "🔗";
-      }
-
-      .pinterest a:before {
-        content: "📍";
-      }
-
-      .soundcloud a:before {
-        content: "📢";
-      }
-
-      .vimeo a:before {
-        content: "🎥";
-      }
-    </style>
-  </head>
+  {{> head}}
 
   <body>
     {{> global-header}}
