Classify with state selector

--- a/src/css/content/_first-heading-permalink.scss
+++ b/src/css/content/_first-heading-permalink.scss
@@ -1,5 +1,5 @@
-// First Heading
-.permalink .first-heading {
+// First Heading on Permalink
+.first-heading.is-in-permalink {
   @extend %decorative-border;
 
   color: $color-fg-tagline;
