--- a/src/css/content/_section-footer-permalink.scss
+++ b/src/css/content/_section-footer-permalink.scss
@@ -1,5 +1,5 @@
-// Section Footer
-.permalink .section-footer p {
+// Section Footer on Permalink
+.section-footer.is-in-permalink p {
   @media (min-width: $breakpoint-full) {
     margin-top: ($height-decorative-border + ($height-tagline-full - $height-footing) / 2);
   }
