--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -2,7 +2,7 @@
 
 <!-- blosxom head -->
 <!DOCTYPE html>
-<html lang="$blog_language"<?$permalink::is_permalink eq="1"> class="permalink"</?>>
+<html lang="$blog_language">
   {{> head}}
 
   <body>
@@ -20,9 +20,9 @@
 
 <!-- blosxom story -->
       <article<?$permalink::has_eyecatch eq="1"> class="has-image"</?>>
-        <h1 class="first-heading">$title</h1>
+        <h1 class="first-heading<?$permalink::is_permalink eq="1"> is-in-permalink</?>">$title</h1>
 
-        <footer class="section-footer">
+        <footer class="section-footer<?$permalink::is_permalink eq="1"> is-in-permalink</?>">
           <p><time class="date" datetime="$yr-$mo_num-$da<?$fn>T</?>$ti<?$fn>:</?>00+09:00">$mo <@utils.strip_leading_zeros output="Yes">$da</@utils.strip_leading_zeros>, $yr</time>
             · <span class="tag"><a href="$url$path/">$categories::name</a></span></p>
         </footer>
