--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -23,7 +23,7 @@
         <h1 class="first-heading<?$permalink::is_permalink eq="1"> is-in-permalink</?>">$title</h1>
 
         <footer class="section-footer<?$permalink::is_permalink eq="1"> is-in-permalink</?>">
-          <p><time class="date" datetime="$yr-$mo_num-$da<?$fn>T</?>$ti<?$fn>:</?>00+09:00">$mo <@utils.strip_leading_zeros output="Yes">$da</@utils.strip_leading_zeros>, $yr</time>
+          <p><time class="date" datetime="$yr-$mo_num-$da<?$fn>T</?>$ti<?$fn>:</?>00+09:00">$mo <@num.strip_leading_zeros output="Yes">$da</@utils.strip_leading_zeros>, $yr</time>
             · <span class="tag"><a href="$url$path/">$categories::name</a></span></p>
         </footer>
 
@@ -45,7 +45,6 @@
     {{> global-footer}}
   </body>
 </html>
-<!-- DEBUG: $utils::debug -->
 
 <!-- blosxom back_and_forth_next -->
 <nav class="read-older">
