Remove last bottom margin from figure child

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -132,6 +132,11 @@ dd {
 figure {
   @extend %margin;
   @extend %positioning-root;
+
+  > :nth-last-child(2),
+  > :nth-last-child(2) > :last-child {
+    margin-bottom: 0;
+  }
 }
 
 figcaption {
@@ -144,6 +149,7 @@ figcaption {
     border-left: $width-border-blockquote solid $color-border-blockquote;
     color: $color-fg-blockquote;
     padding-left: $padding-left-blockquote;
+    padding-top: $margin;
 
     &::before {
       content: initial;
