Combine to Sections

--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -22,9 +22,9 @@
 
 // Content
 @import "content";
+@import "content/sections";
 @import "content/first-heading";
 @import "content/section-footer";
-@import "content/article";
 
 
 // Global Footer
