Add Share Buttons widget

--- a/src/css/permalink.scss
+++ b/src/css/permalink.scss
@@ -23,4 +23,5 @@
 @import "widget/pull-quote";
 @import "widget/read-older";
 @import "widget/seealso";
+@import "widget/share-buttons";
 @import "widget/sidenote";
