--- a/src/css/style-guide.scss
+++ b/src/css/style-guide.scss
@@ -27,6 +27,7 @@
 @import "widget/searchbox";
 @import "widget/seealso";
 @import "widget/sidenote";
+@import "widget/share-buttons";
 @import "widget/topic";
 
 
