--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -28,6 +28,10 @@
         </footer>
 
         $body
+
+        <aside class="share-buttons">
+          <p><a class="twitter" href="https://twitter.com/intent/tweet?text=<@uri.encode output="Yes">$title</@uri.encode>&url=<@uri.encode output="Yes">$uri::canonical</@uri.encode>&via=hail2u_">Tweet</a></p>
+        </aside>
       </article>
 
       <?$back_and_forth::enabled eq="1">
