--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -30,7 +30,11 @@
         $body
 
         <aside class="share-buttons">
-          <p><a class="twitter" href="https://twitter.com/intent/tweet?text=<@uri.encode output="Yes">$title</@uri.encode>&url=<@uri.encode output="Yes">$uri::canonical</@uri.encode>&via=hail2u_">Tweet</a></p>
+          <ul>
+            <li><a class="twitter" href="https://twitter.com/intent/tweet?text=<@uri.encode output="Yes">$title</@uri.encode>&url=<@uri.encode output="Yes">$uri::canonical</@uri.encode>&via=hail2u_">Twitterでシェア</a></li>
+            <li><a class="facebook" href="https://www.facebook.com/sharer/sharer.php?u=<@uri.encode output="Yes">$uri::canonical</@uri.encode>">Facebookでシェア</a></li>
+            <li><a class="hatena" href="http://b.hatena.ne.jp/add?title=<@uri.encode output="Yes">$title</@uri.encode>&url=<@uri.encode output="Yes">$uri::canonical</@uri.encode>">はてなでブックマーク</a></li>
+          </ul>
         </aside>
       </article>
 
