Outdent lists on small screen

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -105,6 +105,15 @@ ol {
   ol {
     margin-bottom: 0;
   }
+
+  @media (min-width: $breakpoint-content) {
+    padding-left: 0;
+
+    ul,
+    ol {
+      padding-left: $indent;
+    }
+  }
 }
 
 dl {
