Change email address

--- a/src/html/about/index.mustache
+++ b/src/html/about/index.mustache
@@ -83,7 +83,7 @@
       <section id="contact">
         <h1>問い合わせ</h1>
 
-        <p>このウェブサイト内のコンテンツについて報告や問い合わせ・クレーム等がある場合は、<a href="mailto:hi@hail2u.net">メール</a>で連絡してください。</p>
+        <p>このウェブサイト内のコンテンツについて報告や問い合わせ・クレーム等がある場合は、<a href="mailto:hail2u@gmail.com">メール</a>で連絡してください。</p>
       </section>
     </main>
 
