--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -31,9 +31,9 @@
 
         <aside class="share-buttons">
           <ul>
-            <li><a class="twitter" href="https://twitter.com/intent/tweet?text=<@uri.encode output="Yes">$title</@uri.encode>&url=<@uri.encode output="Yes">$uri::canonical</@uri.encode>&via=hail2u_">Twitterでシェア</a></li>
-            <li><a class="facebook" href="https://www.facebook.com/sharer/sharer.php?u=<@uri.encode output="Yes">$uri::canonical</@uri.encode>">Facebookでシェア</a></li>
-            <li><a class="hatena" href="http://b.hatena.ne.jp/add?title=<@uri.encode output="Yes">$title</@uri.encode>&url=<@uri.encode output="Yes">$uri::canonical</@uri.encode>">はてなでブックマーク</a></li>
+            <li><a class="twitter" href="https://twitter.com/intent/tweet?text=<@uri.encode output="Yes">$title</@uri.encode>&url=<@uri.encode output="Yes">$uri::canonical</@uri.encode>&via=hail2u_">Twitter</a></li>
+            <li><a class="facebook" href="https://www.facebook.com/sharer/sharer.php?u=<@uri.encode output="Yes">$uri::canonical</@uri.encode>">Facebook</a></li>
+            <li><a class="hatena" href="http://b.hatena.ne.jp/add?title=<@uri.encode output="Yes">$title</@uri.encode>&url=<@uri.encode output="Yes">$uri::canonical</@uri.encode>">はてな</a></li>
           </ul>
         </aside>
       </article>
