Use double colon for pseudo elements
These are minified with tool chain.

--- a/src/css/widget/_share-buttons.scss
+++ b/src/css/widget/_share-buttons.scss
@@ -10,11 +10,11 @@
   li {
     display: inline;
 
-    &:before {
+    &::before {
       content: " · ";
     }
 
-    &:first-child:before {
+    &:first-child::before {
       content: "";
     }
   }
