--- a/src/css/global-header/_logo.scss
+++ b/src/css/global-header/_logo.scss
@@ -4,6 +4,7 @@
   font-size: rem($ratio-text-logo);
   font-weight: bolder;
   line-height: $line-height-logo;
+  margin-bottom: 0;
   margin-top: $margin-small;
   text-transform: uppercase;
 
