--- a/src/css/content/_first-heading.scss
+++ b/src/css/content/_first-heading.scss
@@ -1,13 +1,33 @@
 // First Heading
 .first-heading {
-  margin-top: ($margin-top-h1 + $margin-top-tagline + $height-footing);
+  @extend %decorative-border;
+
+  $m: ($margin-large + $height-footing);
+
+  color: $color-dark-light;
+  font-size: rem($ratio-text-large);
+  font-weight: 700;
+  line-height: $line-height-first-heading;
+  margin-bottom: $m;
+  margin-top: $m;
+  min-width: ($width-content / pow($ratio, 2));
+  width: (100% / $ratio);
 
   @media (min-width: $breakpoint-content) {
-    margin-top: ($margin-top-h1 + $margin-top-tagline-content + $height-footing);
+    $m: $margin-huge;
+
+    font-size: rem($ratio-text-huge);
+    margin-bottom: $m;
+    margin-top: $m;
   }
 
   @media (min-width: $breakpoint-full) {
-    margin-right: $width-protrusion-full;
-    margin-top: ($margin-top-h1 + $margin-top-tagline-full);
+    $m: $margin-gargantuan;
+
+    font-size: rem($ratio-text-first-heading-full);
+    margin-left: (- ($width-supplement + $width-gap-large));
+    margin-bottom: $m;
+    margin-top: $m;
+    width: ($width-full / $ratio);
   }
 }
