--- a/src/css/var/_ratio.scss
+++ b/src/css/var/_ratio.scss
@@ -37,9 +37,9 @@ $ratio-text-hr: $ratio-text-huge;
 // Global Header
 $ratio-text-logo: $ratio-text;
 
-$ratio-text-tagline: $ratio-text-large;
-$ratio-text-tagline-content: $ratio-text-huge;
-$ratio-text-tagline-full: $ratio-text-gargantuan;
+
+// Content
+$ratio-text-first-heading-full: $ratio-text-gargantuan;
 
 
 // Global Footer
