--- a/src/css/var/_size.scss
+++ b/src/css/var/_size.scss
@@ -100,14 +100,10 @@ $padding-left-list: $indent;
 // Global Header
 $line-height-logo: rem($ratio-text-logo * 2);
 
-$line-height-tagline: $line-height-minimal;
-$height-tagline-full: rem($line-height-tagline * $ratio-text-tagline-full);
-$margin-top-tagline: $margin-large;
-$margin-top-tagline-content: $margin-huge;
-$margin-top-tagline-full: $margin-gargantuan;
-$width-min-tagline: ($width-content / pow($ratio, 2));
-$width-tagline: (100% / $ratio);
-$width-tagline-full: ($width-full / $ratio);
+
+// Content
+$line-height-first-heading: $line-height-minimal;
+$height-first-heading-full: rem($line-height-first-heading * $ratio-text-first-heading-full);
 
 
 // Global Footer
