Remove unused class

--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -19,7 +19,7 @@
 <!-- blosxom date -->
 
 <!-- blosxom story -->
-      <article<?$permalink::has_eyecatch eq="1"> class="has-image"</?>>
+      <article>
         <h1 class="first-heading">$title</h1>
 
         <footer class="section-footer">
