Follow style changes

--- a/src/html/blog/index.mustache
+++ b/src/html/blog/index.mustache
@@ -6,8 +6,20 @@
     {{> global-header}}
 
     <main class="content" role="main">
+      <section>
+        <h1 class="first-heading">{{short_title}}</h1>
+
+        <ol class="flat-list">
+          {{#articles}}
+            {{#isFirstInYear}}
+              <li><a href="#on-{{year}}"><time>{{year}}</time></li>
+            {{/isFirstInYear}}
+          {{/articles}}
+        </ol>
+      </section>
+
       <section id="by-category">
-        <h1 class="first-heading">カテゴリ別</h1>
+        <h1>カテゴリ別</h1>
 
         <ul class="flat-list">
           <li><a href="./blog/">Blog</a></li>
