--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -11,7 +11,7 @@
     <main class="content" role="main">
       <?$categories::enabled eq="1">
         <section>
-          <h1 class="first-heading">“$categories::title”についての記事</h1>
+          <h1 class="first-heading">{{short_title}}</h1>
 
           <ol class="post-list">
       </?>
