--- a/src/html/documents/index.mustache
+++ b/src/html/documents/index.mustache
@@ -7,16 +7,29 @@
 
     <main class="content" role="main">
       <section>
-        <h1 class="first-heading"><a href="/documents/democratic-design.html">民主的なデザイン</a></h1>
+        <h1 class="first-heading">{{short_title}}</h1>
 
-        <footer class="section-footer">
-          <p><time class="date" datetime="2015-12-22T17:21:23+09:00">Dec 22, 2015</time></p>
-        </footer>
-
-        <p>民主的であるとは自由で平等であることとも定義することができます。デザインにおいて民主的であるとはいったいどういうことでしょうか。</p>
+        <ol class="flat-list">
+          <li><a href="#on-2015"><time>2015</time></a></li>
+          <li><a href="#on-2014"><time>2014</time></a></li>
+          <li><a href="#on-2013"><time>2013</time></a></li>
+          <li><a href="#on-2012"><time>2012</time></a></li>
+          <li><a href="#on-2011"><time>2011</time></a></li>
+          <li><a href="#on-2009"><time>2009</time></a></li>
+          <li><a href="#on-2008"><time>2008</time></a></li>
+          <li><a href="#upto-2007"><time>～ 2007</time></a></li>
+        </ol>
       </section>
 
-      <section>
+      <section id="on-2015">
+        <h1><time>2015</time></h1>
+
+        <ol class="post-list">
+          <li><a href="/documents/democratic-design.html">民主的なデザイン</a></li>
+        </ol>
+      </section>
+
+      <section id="on-2014">
         <h1><time>2014</time></h1>
 
         <ol class="post-list">
@@ -27,7 +40,7 @@
         </ol>
       </section>
 
-      <section>
+      <section id="on-2013">
         <h1><time>2013</time></h1>
 
         <ol class="post-list">
@@ -41,7 +54,7 @@
         </ol>
       </section>
 
-      <section>
+      <section id="on-2012">
         <h1><time>2012</time></h1>
 
         <ol class="post-list">
@@ -51,7 +64,7 @@
         </ol>
       </section>
 
-      <section>
+      <section id="on-2011">
         <h1><time>2011</time></h1>
 
         <ol class="post-list">
@@ -63,7 +76,7 @@
         </ol>
       </section>
 
-      <section>
+      <section id="on-2009">
         <h1><time>2009</time></h1>
 
         <ol class="post-list">
@@ -73,7 +86,7 @@
         </ol>
       </section>
 
-      <section>
+      <section id="on-2008">
         <h1><time>2008</time></h1>
 
         <ol class="post-list">
@@ -81,7 +94,7 @@
         </ol>
       </section>
 
-      <section>
+      <section id="upto-2007">
         <h1>～ <time>2007</time></h1>
 
         <ol class="post-list">
