--- a/src/html/links/index.mustache
+++ b/src/html/links/index.mustache
@@ -7,18 +7,15 @@
 
     <main class="content" role="main">
       <section>
-        <h1 class="first-heading">Sources</h1>
+        <h1 class="first-heading">{{short_title}}</h1>
 
-        <ul class="flat-list">
-          <li class="pinboard"><a href="https://pinboard.in/u:hail2u/">Pinboard</a></li>
-          <li class="dribbble"><a href="https://dribbble.com/hail2u/likes">Dribbble</a></li>
-          <li class="github"><a href="https://github.com/stars/hail2u">GitHub</a></li>
-          <li class="instagram"><a href="https://instagram.com/hail2u_/">Instagram</a></li>
-          <li class="instapaper"><a href="https://www.instapaper.com/p/hail2u">Instapaper</a></li>
-          <li class="pinterest"><a href="https://www.pinterest.com/hail2u/pins/">Pinterest</a></li>
-          <li class="soundcloud"><a href="https://soundcloud.com/haiil2u/likes">SoundCloud</a></li>
-          <li class="vimeo"><a href="https://vimeo.com/hail2u/likes">Vimeo</a></li>
-        </ul>
+        <ol class="flat-list">
+          {{#bookmarks}}
+            {{#isFirstInYear}}
+              <li><a href="#on-{{year}}"><time>{{year}}</time></li>
+            {{/isFirstInYear}}
+          {{/bookmarks}}
+        </ol>
       </section>
 
       {{#bookmarks}}
@@ -39,6 +36,21 @@
           </section>
         {{/isLastInYear}}
       {{/bookmarks}}
+
+      <section>
+        <h1>Sources</h1>
+
+        <ul class="flat-list">
+          <li class="pinboard"><a href="https://pinboard.in/u:hail2u/">Pinboard</a></li>
+          <li class="dribbble"><a href="https://dribbble.com/hail2u/likes">Dribbble</a></li>
+          <li class="github"><a href="https://github.com/stars/hail2u">GitHub</a></li>
+          <li class="instagram"><a href="https://instagram.com/hail2u_/">Instagram</a></li>
+          <li class="instapaper"><a href="https://www.instapaper.com/p/hail2u">Instapaper</a></li>
+          <li class="pinterest"><a href="https://www.pinterest.com/hail2u/pins/">Pinterest</a></li>
+          <li class="soundcloud"><a href="https://soundcloud.com/haiil2u/likes">SoundCloud</a></li>
+          <li class="vimeo"><a href="https://vimeo.com/hail2u/likes">Vimeo</a></li>
+        </ul>
+      </section>
     </main>
 
     {{> site-search}}
