Keep Post List info right on large screen

--- a/src/css/widget/_post-list.scss
+++ b/src/css/widget/_post-list.scss
@@ -37,8 +37,9 @@
 
   @media (min-width: $breakpoint-full) {
     .info {
-      float: none;
-      margin-left: 0;
+      margin-right: 0;
+      position: static;
+      width: auto;
     }
   }
 }
