Add side white spaces Search Form query

--- a/src/css/class/_search-form.scss
+++ b/src/css/class/_search-form.scss
@@ -9,7 +9,7 @@
     font-size: inherit;
     height: $height-search-form-query;
     line-height: $height-search-form-query;
-    padding: 0;
+    padding: 0 $padding;
   }
 
   .query {
