Optimize First Heading width
- Keep full width on small or medium screen
- Add right white spaces for date component

--- a/src/css/content/_first-heading.scss
+++ b/src/css/content/_first-heading.scss
@@ -10,8 +10,6 @@
   line-height: $line-height-first-heading;
   margin-bottom: $m;
   margin-top: $m;
-  min-width: ($width-content / pow($ratio, 2));
-  width: (100% / $ratio);
 
   @media (min-width: $breakpoint-content) {
     $m: $margin-huge;
@@ -25,9 +23,6 @@
     $m: $margin-gargantuan;
 
     font-size: rem($ratio-text-first-heading-full);
-    margin-left: (- ($width-supplement + $width-gap-large));
-    margin-bottom: $m;
-    margin-top: $m;
-    width: ($width-full / $ratio);
+    margin: $m $width-protrusion-full $m (- ($width-supplement + $width-gap-large));
   }
 }
