Use relative weight

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -36,6 +36,7 @@ article,
 section {
   section h1 {
     font-size: rem($ratio-text-large);
+    font-weight: bolder;
     margin-top: $margin-huge;
 
     @media (min-width: $breakpoint-full) {
