--- a/src/css/content/_first-heading.scss
+++ b/src/css/content/_first-heading.scss
@@ -6,7 +6,7 @@
 
   color: $color-dark-light;
   font-size: rem($ratio-text-large);
-  font-weight: 700;
+  font-weight: bolder;
   line-height: $line-height-first-heading;
   margin-bottom: $m;
   margin-top: $m;
